# automate

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYING  Doxyfile  README  TODO  automate.kdevelop  automate.kdevelop.pcs  automate.kdevses  automate.pro  automatehandler.qrc  qrc_automatehandler.cpp  version.h.in
doc/: CMakeLists.txt  Doxyfile.in
doc/diagrams/: QModelIndexConcepts.odg  graphicssceneasabstractitemview.odg
icons/: changelog  index.desktop  license  readme
modeltest/: modeltest.cpp
src/: AbstractTreeItem.cpp  AbstractTreeItem.h  AbstractView.cpp  AbstractView.h  AutomateRoot.cpp  AutomateRoot.h  GraphicsScene.cpp  GraphicsScene.h  ItemView.cpp  ItemView.h  Model.cpp  Model.h  SceneItem_Connection.cpp  SceneItem_Connection.h  SceneItem_ConnectionHandle.cpp  SceneItem_ConnectionHandle.h  SceneItem_ConnectionLabel.cpp  SceneItem_ConnectionLabel.h  SceneItem_FlexibleConnection.cpp  SceneItem_FlexibleConnection.h  SceneItem_LabelEditor.cpp  SceneItem_LabelEditor.h  SceneItem_Node.cpp  SceneItem_Node.h  SceneItem_Types.h  ScneItem_FlexibleHandle.cpp  ScneItem_FlexibleHandle.h  SymbolTable.cpp  SymbolTable.h  automate.cpp  automate.h  automate_algorithms.cpp  automate_algorithms.h  automatehandler.cpp  automatehandler.h  graphicsView.cpp  graphicsView.h  main.cpp  mainGraphicsView.cpp  mainGraphicsView.h  (+24 more)
src/GraphicsView/: AbstractMVCGraphicsItem.cpp  AbstractMVCGraphicsItem.h  GraphicsItemModelExtension.cpp  GraphicsItemModelExtension.h  GraphicsScene.cpp  GraphicsScene.h  ItemView.cpp  ItemView.h  SceneItem_Connection.cpp  SceneItem_Connection.h  SceneItem_ConnectionHandle.cpp  SceneItem_ConnectionHandle.h  SceneItem_LabelEditor.cpp  SceneItem_LabelEditor.h  SceneItem_Node.cpp  SceneItem_Node.h  SceneItem_Types.h  graphicsView.cpp  graphicsView.h
src/TreeView/: treeView.cpp  treeView.h
src/backend/: AbstractTreeItem.cpp  AbstractTreeItem.h  AutomateRoot.cpp  AutomateRoot.h  SymbolTable.cpp  SymbolTable.h  meta_automate.h  meta_node.cpp  meta_node.h  node.cpp  node.h  node_alphabet.h  node_connection.cpp  node_connection.h  objectCounter.cpp  objectCounter.h  objectProperty.cpp  objectProperty.h
src/ui/: AutomateHandlerWidget.ui  GraphicsViewMainWindow.ui  treeViewMainWindow.ui
src/unused/: automate_algorithms.cpp  automate_algorithms.h  orderedpair.h
ui/: AutomateHandlerWidget.ui  controllerWidget.ui  graphicsViewWidget.ui  treeViewMainWindow.ui  treeViewWidget.ui
